# 2023.cpp

./: .gitignore  CMakeLists.txt
lab01/: CMakeLists.txt  functions.cpp  functions.h  main_01.cpp
lab02/: CMakeLists.txt  main_02.cpp
lab03/: CMakeLists.txt  List.cpp  List.h  main_03.cpp
lab04/: CMakeLists.txt  main_04.cpp
lab05/: Answer.h  CMakeLists.txt  Question.cpp  Question.h  Quiz.cpp  Quiz.h  QuizGame.cpp  QuizGame.h  main_05.cpp  quiz.txt
lab06/: CMakeLists.txt  Matrix.cpp  Matrix.h  main_06.cpp
lab07/: CMakeLists.txt  main_07.cpp
lab08/: CMakeLists.txt  main_08.cpp
lab09/: CMakeLists.txt  main_09.cpp
lab10/: CMakeLists.txt  main_10.cpp
lab11/: CMakeLists.txt  GraduationDao.cpp  GraduationDao.h  Student.cpp  Student.h  StudentService.h  StudentServiceImpl.cpp  StudentServiceImpl.h  hungarian.txt  main_11.cpp  math.txt  names.txt  romanian.txt
lab12/: CMakeLists.txt  Settlement.cpp  Settlement.h  SettlementStatistics.h  SettlementStatisticsImpl.cpp  SettlementStatisticsImpl.h  main_12.cpp  telepulesek.csv
lab13/: CMakeLists.txt  SimpleTextGenerator.cpp  SimpleTextGenerator.h  TextGenerator.h  main_13.cpp
