cmake_minimum_required(VERSION 3.17)
set(CMAKE_CXX_STANDARD 17)

project(cpp-2022)

add_subdirectory(lab01)
add_subdirectory(lab02)
add_subdirectory(lab03)
add_subdirectory(lab04)
add_subdirectory(lab05)
add_subdirectory(lab06)
add_subdirectory(lab07)
add_subdirectory(lab08)
add_subdirectory(lab09)
add_subdirectory(lab10)
add_subdirectory(lab11)
add_subdirectory(lab12)
add_subdirectory(lab13)